; ModuleID = '/home/carl/AnghaBench/macvim/src/extr_if_ruby.c_buffer_new.c'
source_filename = "/home/carl/AnghaBench/macvim/src/extr_if_ruby.c_buffer_new.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i8* }

@cBuffer = common dso_local global i32 0, align 4
@objtbl = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.TYPE_4__*)* @buffer_new to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @buffer_new(%struct.TYPE_4__* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i64, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  %5 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %6 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %5, i32 0, i32 0
  %7 = load i8*, i8** %6, align 8
  %8 = icmp ne i8* %7, null
  br i1 %8, label %9, label %14

9:                                                ; preds = %1
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 0
  %12 = load i8*, i8** %11, align 8
  %13 = ptrtoint i8* %12 to i64
  store i64 %13, i64* %2, align 8
  br label %28

14:                                               ; preds = %1
  %15 = load i32, i32* @cBuffer, align 4
  %16 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %17 = call i64 @Data_Wrap_Struct(i32 %15, i32 0, i32 0, %struct.TYPE_4__* %16)
  store i64 %17, i64* %4, align 8
  %18 = load i64, i64* %4, align 8
  %19 = inttoptr i64 %18 to i8*
  %20 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %21 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %20, i32 0, i32 0
  store i8* %19, i8** %21, align 8
  %22 = load i32, i32* @objtbl, align 4
  %23 = load i64, i64* %4, align 8
  %24 = call i32 @rb_obj_id(i64 %23)
  %25 = load i64, i64* %4, align 8
  %26 = call i32 @rb_hash_aset(i32 %22, i32 %24, i64 %25)
  %27 = load i64, i64* %4, align 8
  store i64 %27, i64* %2, align 8
  br label %28

28:                                               ; preds = %14, %9
  %29 = load i64, i64* %2, align 8
  ret i64 %29
}

declare dso_local i64 @Data_Wrap_Struct(i32, i32, i32, %struct.TYPE_4__*) #1

declare dso_local i32 @rb_hash_aset(i32, i32, i64) #1

declare dso_local i32 @rb_obj_id(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
